--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kazim Ozdil",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.5.0"
